--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     </header>
     
     <main>
-        <h3>A new website, coming soon :tm:, covering all things crypto, onchain, ethereum development</h3>
+        <h3>A new website, coming soon™️, covering all things crypto, onchain, ethereum development</h3>
 
         <nav>
-            <h3><a href="#" target="_blank" rel="noopener noreferrer">Base Engineering Blog</a></h3>
-            <h3><a href="#" target="_blank" rel="noopener noreferrer">Get in touch</a></h3>
+            <h3><a href="/blog" target="_blank" rel="noopener noreferrer">Base Engineering Blog</a></h3>
+            <h3><a href="https://discord.com/invite/buildonbase" target="_blank" rel="noopener noreferrer">Get in touch</a></h3>
         </nav>
     </main>
 </body>
